# Homotopy-groups-of-spheres-project

./: CHANGELOG.md  Fox.hs  HGS.cabal  Hall.hs  LICENSE  Lambda.hs  Padic.hs  README.md  cabal.project.local  generated.txt
app/: Main.hs
src/: Bridge.hs  Fox.hs  Hall.hs  Lambda.hs  Padic.hs  WuModel.hs
test/: LinearPipelineSpec.hs  Main.hs
