cabal-version:      3.0
name:               HGS
version:            0.1.0.0
homepage:           dmivilensky.ru
license:            BSD-3-Clause
license-file:       LICENSE
author:             Dmitry Pasechnyuk-Vilensky
maintainer:         dmivilensky1@gmail.com
category:           Math
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common lib-opts
  ghc-options:
    -O2
    -funfolding-use-threshold=80
    -flate-dmd-anal
    -fspecialise-aggressively
    -fllvm
    -pgmlo=/opt/homebrew/opt/llvm@15/bin/opt
    -pgmlc=/opt/homebrew/opt/llvm@15/bin/llc

common bin-opts
  ghc-options:
    -O0
    -Wno-partial-type-signatures
    -Wno-unused-imports

common exe-opts
  ghc-options:
    -threaded
    -rtsopts
    "-with-rtsopts=-N -A128M -qn1 -qb0"

library
  import: lib-opts
  ghc-options: -dynamic-too

  exposed-modules:
    Fox
    Hall
    Lambda
    Padic
    WuModel
    Bridge

  build-depends:
      base       >= 4.18 && < 4.20
    , containers >= 0.6  && < 0.7
    , text       >= 2.0  && < 2.1
    , parallel   >= 3.2  && < 3.3
    , deepseq    >= 1.4  && < 1.5
    , vector     >= 0.13 && < 0.14

  hs-source-dirs:   src
  default-language: Haskell2010

executable HGS
  import: bin-opts, exe-opts
  ghc-options: -dynamic

  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: Haskell2010

  build-depends:
      base       >= 4.18 && < 4.20
    , HGS

test-suite HGS-test
  import: bin-opts, exe-opts
  ghc-options: -dynamic

  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   test
  default-language: Haskell2010

  build-depends:
      base       >= 4.18 && < 4.20
    , HGS
